Fixed buttons cutting off in mobile.

--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -297,9 +297,6 @@ section {
 
 @media print, screen and (max-width: 480px) {
 
-  #header {
-    margin-top: -20px;
-  }
 
   section {
     margin-top: 40px;
